recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: Unit does not take parameters
if(levels !=0)snowSide(levels, length){
                                      ^