recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
avance(length)
if(levels !=0)snowSide(levels, length){
left(120);
right(240)
avance(120)
}


}
